# docport

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci-cd.yml  codeql.yml
docs/: dependency-risk-exceptions.md  entity-and-store-design.md  observability-and-error-handling.md  pre-commit-setup.md  projections-and-moleql-integration.md  testing-guide.md
docs/adrs/: 0001-store-observation-and-error-boundary.md
src/docport/: __init__.py
src/docport/adapters/: __init__.py  async_mongo_store.py  errors.py  mongo_document_mapper.py  mongo_store.py
src/docport/domain/: __init__.py  constants.py  entity.py  errors.py  observability.py  query.py  types.py
src/docport/ports/: __init__.py  async_store.py  base.py  observability.py  store.py
tests/docport/: test_package_exports.py
tests/docport/adapters/: test_async_mongo_store.py  test_errors.py  test_mongo_document_mapper.py  test_mongo_store.py
tests/docport/domain/: test_entity.py  test_errors.py  test_observability.py  test_query.py
tests/docport/ports/: test_store.py
tools/: release.py  version.py
